tests/src/snapshots/fe_compiler_tests__compile_errors__call_keccak_without_parameter.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---
error: `keccak256` expects 1 argument, but 0 were provided
  ┌─ fixtures/compile_errors/call_keccak_without_parameter.fe:7:8
  │
7 │        keccak256()
  │        ^^^^^^^^^-- supplied 0 arguments
  │        │         
  │        expects 1 argument


